# notam-alerts

./: .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: constants.py  data_handler.py  notifier.py  scraper.py  utils.py
tests/: test_data_handler.py  test_main.py  test_notifier.py  test_notifier_http.py  test_scraper.py  test_utils.py
